test_next-20160724/20160724013033/build/defconfig/build_20160724013033_log.txt
test_build: Sun Jul 24 01:33:39 PDT 2016: started on defconfig test_next-20160724 (6f9bfbf3e7da5b1038f3785fc3511c140e190aae)
test_build: Sun Jul 24 01:33:39 PDT 2016: serial is 20160724013033
arch/arm64/kvm/../../../virt/kvm/arm/vgic/vgic-irqfd.c:48:5: error: conflicting types for ‘kvm_set_routing_entry’
 int kvm_set_routing_entry(struct kvm_kernel_irq_routing_entry *e,
     ^
In file included from arch/arm64/kvm/../../../virt/kvm/arm/vgic/vgic-irqfd.c:18:0:
./include/linux/kvm_host.h:1022:5: note: previous declaration of ‘kvm_set_routing_entry’ was here
 int kvm_set_routing_entry(struct kvm *kvm,
     ^
make[1]: *** [arch/arm64/kvm/../../../virt/kvm/arm/vgic/vgic-irqfd.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [arch/arm64/kvm] Error 2
make: *** Waiting for unfinished jobs....
test_build: Sun Jul 24 01:34:56 PDT 2016: FAILED on defconfig test_next-20160724
test_build: Sun Jul 24 01:34:56 PDT 2016: ended on defconfig test_next-20160724
